loopfor.LoopCourse.scala.error
Compilation error:
LoopCourse:3: error: ';' expected but ',' found.
  avance();avance();avance();avance(),avance();avance();avance();avance();gauche();avance();avance();avance();avance();avance();avance();avance();avance();gauche();avance();avance();avance();avance();avance();avance();avance();avance();avance();gauche();avance();avance();avance();avance();avance();avance();avance();avance(),gauche()
                                     ^LoopCourse:3: error: ';' expected but ',' found.
  avance();avance();avance();avance(),avance();avance();avance();avance();gauche();avance();avance();avance();avance();avance();avance();avance();avance();gauche();avance();avance();avance();avance();avance();avance();avance();avance();avance();gauche();avance();avance();avance();avance();avance();avance();avance();avance(),gauche()
                                                                                                                                                                                                                                                                                                                                     ^